--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <section class="home" id="home">
 
     <div class="image">
-        <img src="images/homes3.jpg" alt="Home Image" height="500" style="border-radius: 20px;">
+        <img src="homes3.jpg" alt="Home Image" height="500" style="border-radius: 20px;">
     </div>
 
     <div class="content">
@@ -101,7 +101,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="images/docimage.jpg" height="450" style="border-radius: 30px;" alt="">
+            <img src="docimage.jpg" height="450" style="border-radius: 30px;" alt="">
         </div>
 
         <div class="content">
